--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -16,9 +16,9 @@
 
         <div class="header__menu-desktop">
 
-          <a href="{{ site.baseurl }}/workshop.html" class="button">
+          <!--a href="{{ site.baseurl }}/workshop.html" class="button">
             Workshop
-          </a>
+          </a-->
 
           {% if site.data.conference.talks_available %}
           <a href="{{ site.baseurl }}/talks.html" class="button">
