--- a/_includes/index/conf-infos.html
+++ b/_includes/index/conf-infos.html
@@ -5,10 +5,10 @@
         Cos'è?
       </h4>
       <p class="conf-infos__text">
-        Laravel è uno dei framework PHP più apprezzati sul mercato.
+        Laravel è uno dei framework PHP più apprezzati sul mercato e partorito dalla mente di Taylor Otwell che ha saputo costruire e far crescere intorno una community ed un ecosistema di strumenti tra i più completi.
       </p>
       <p class="conf-infos__text">
-        yadda yadda
+        Il LaravelDay è la prima conferenza tutta italiana, nata dalla community e per la community, che porta case study reali e buone pratiche di lavoro al mondo dei professionisti che usano Laravel nel loro lavoro quotidiano
       </p>
       <h4 class="conf-infos__title">
         Cosa imparerai?
