Remove duplicated configuration. Fix templates.

--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -39,9 +39,9 @@
                   <a href="{{ site.data.tickets.url }}" class="button button--footer button--left">Registrati</a>
                 {% endif %}
               </div>
-              {% if site.data.speakers.call_for_paper %}
+              {% if site.data.conference.call_for_paper %}
               <div class="footer__nav-item">
-                <a href="{{ site.data.speakers.call_for_paper_url }}" target="_blank" class="button button--footer button--left">Call for paper</a>
+                <a href="{{ site.data.conference.call_for_paper_url }}" target="_blank" class="button button--footer button--left">Call for paper</a>
               </div>
               {% endif %}
               <div class="footer__nav-item">
