--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -34,8 +34,8 @@
           <!-- a href="{{ site.baseurl }}/#venue" class="button">
             Dove
           </a -->
-          {% if site.data.speakers.call_for_paper %}
-          <a href="{{ site.data.speakers.call_for_paper_url }}" target="_blank" class="button">
+          {% if site.data.conference.call_for_paper %}
+          <a href="{{ site.data.conference.call_for_paper_url }}" target="_blank" class="button">
             Call for paper
           </a>
           {% endif %}
