--- a/_includes/layout/menu.html
+++ b/_includes/layout/menu.html
@@ -58,9 +58,9 @@
           </a>
         </li>
         {% endif %}
-        {% if site.data.speakers.call_for_paper %}
+        {% if site.data.conference.call_for_paper %}
         <li class="menu__item">
-          <a href="{{ site.data.speakers.call_for_paper_url }}" class="menu__button">
+          <a href="{{ site.data.conference.call_for_paper_url }}" class="menu__button">
             Call for paper
           </a>
         </li>
