--- a/_includes/sponsor/intro.html
+++ b/_includes/sponsor/intro.html
@@ -13,7 +13,7 @@
     <div class="sponsor-intro__row">
       <div class="sponsor-intro__row-column">
         <p class="sponsor-intro__text">
-          Ottima idea! Contribuendo alla conferenza otterrai visibilità esattamente presso le persone che vorresti contattare: developer esperti con Symfony!
+          Ottima idea! Contribuendo alla conferenza otterrai visibilità esattamente presso le persone che vorresti contattare: developer esperti con Laravel!
         </p>
       </div>
       <div class="sponsor-intro__row-column">
